--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-body {
-  font-family: "Inter", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+* {
+  font-family: "Noto Serif", serif;
+}
+
+.top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #0046b8;
+  margin-bottom: 1em;
+  color: white;
+}
+.top h1 {
+  font-weight: 800;
+}
+.top p {
+  font-weight: 700;
+  font-size: medium;
 }
 
 .full-container {
@@ -9,7 +26,7 @@ body {
 }
 .full-container iframe {
   height: 80vh;
-  width: 70vw;
+  width: 80vw;
 }
 .full-container .sidebar {
   padding: 0 1.1em;
@@ -17,9 +34,6 @@ body {
 }
 .full-container .sidebar .title-container .title-desc {
   font-size: 20px;
-}
-.full-container .sidebar .title-container .button-row {
-  margin-top: 2.75em;
 }
 .full-container .sidebar .title-container .button-row button {
   border-width: 0px;
@@ -53,10 +67,28 @@ body {
 }
 .full-container .event img {
   width: 100px;
+  height: 100px;
   margin: 1.1em;
   border-radius: 120px;
 }
 .full-container .event .event-desc {
   width: 40%;
   padding: 0 1.1em;
+}
+.full-container .event .foods {
+  margin-top: 1.5em;
+}
+
+a.register {
+  width: 10em;
+  display: flex;
+  justify-content: center;
+  background-color: #e3e9ff;
+  border: solid 2px #0951d8;
+  border-radius: 5px;
+  padding: 0.8em 1.4em;
+  color: black;
+  font-weight: 700;
+  font-size: 20px;
+  margin: 2em 0;
 }/*# sourceMappingURL=styles.css.map */
