--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-body{
-    font-family: 'Inter', sans-serif;
+
+*{
+    // font-family: 'Inter', sans-serif;
+    font-family: 'Noto Serif', serif;
+}
+
+.top{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #0046b8;
+    margin-bottom: 1em;
+    color: white;
+    h1{
+        font-weight: 800;
+    }
+    p{
+        font-weight: 700;
+        font-size: medium;
+    }
 }
 
 .full-container{
@@ -9,7 +28,7 @@ body{
     display: flex;
     iframe{
         height: 80vh;
-        width: 70vw;
+        width: 80vw;
     }
     .sidebar{
         padding: 0 1.1em;
@@ -19,7 +38,7 @@ body{
                 font-size: 20px;
             }
             .button-row{
-                margin-top: 2.75em;
+                // margin-top: 2.75em;
                 button{
                     border-width: 0px;
                     span{
@@ -54,6 +73,7 @@ body{
         display: flex;
         img{
             width: 100px;
+            height: 100px;
             margin: 1.1em;
             border-radius: 120px;
         }
@@ -61,5 +81,22 @@ body{
             width: 40%;
             padding: 0 1.1em;
         }
+        .foods{
+            margin-top: 1.5em;
+        }
     }
+  }
+
+  a.register{
+    width: 10em;
+    display: flex;
+    justify-content: center;
+    background-color: #e3e9ff;
+    border: solid 2px #0951d8;
+    border-radius: 5px;
+    padding: 0.8em 1.4em;
+    color: black;
+    font-weight: 700;
+    font-size: 20px;
+    margin: 2em 0;
   }
